syntax = "proto3";
package bean;

//messageType = 1
message WraperMessage{
	uint64 connId = 1;		//连接id,用来唯一标识一个tcp连接
	bytes message = 2;		//传输的消息内容
	bool isLoginIn = 3;		//是否是登入
	bool isLoginOut = 4;	//是否是登出
}

//作为通用回应,messageType根据请求的情况而定
message CommonResponse{
	uint64 rid = 1;		//流水号
	string code = 2;	//回应的响应码
	string desc = 3;	//回应码的描述
}

//messageType = 11
message DeviceRegisteRequest{
	uint64 rid = 1;	//流水号
	string ssoToken = 11;	//统一登陆系统登陆token
	string appId = 12;		//应用id
	string deviceId = 13;	//设备id
	string platform = 14;	//平台
}

//messageType = 12
message DeviceRegisteResponse{
	uint64 rid = 1;	//流水号
	string code = 2;	//回应的响应码
	string desc = 3;	//回应码的描述
 	string token = 11;	//注册后的凭证
}

//messageType = 13
message DeviceLoginRequest {
	uint64 rid = 1;			//流水号
	string token = 11;		//im系统的token
    string appId = 12;      //分配个应用的id
   	string deviceId = 13;   //设备的id
   	string platform = 14;	//
}

//messageType = 14
message DeviceLoginResponse {
	uint64 rid = 1;		//流水号
	string code = 2;	//回应的响应码
	string desc = 3;	//回应码的描述
}





